# faebot

./: README.md  bot.py  db.py  pyproject.toml
alembic/: env.py
alembic/versions/: 03c44c9e2334_initial.py  1ea119b393b5_.py  5b8fb4a24a88_add_exp.py
faebot/: bot.py  db.py  newbot.py  oldbot.py
