[tool.poetry]
name = "faebot"
version = "0.1.0"
description = "discord bot for playing slightly modified Fate Accelerated Edition"
authors = ["SilentWrangler <thousandgoblins@gmail.com>"]
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.7"
"discord.py" = "^1.7.3"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
contextlib3 = "^3.10.0"
python-dotenv = "^0.19.1"
mysqlclient = "^2.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
